# geany

./: LICENSE.txt  pyproject.toml
geany/: __init__.py  abc.py  cli.py  config.py  data.py  errors.py  geany-nlu.yaml  geany.py
geany/generators/: openai.py
geany/prompts/: intent_classification.py
