[tool.poetry]
name = "geany"
version = "0.1.0"
description = "GEnerate ANY text sample using LLMs."
authors = ["Radu Chindris <radu.chindris@uzina-software.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
jinja2 = "^3.1.3"
openai = "^1.13.3"
hyperconf = {path = "../hyperconf"}
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
